@@ -3,7 +3,7 @@
 
     DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
 
-    Copyright (c) 1997-2011 Oracle and/or its affiliates. All rights reserved.
+    Copyright (c) 1997-2012 Oracle and/or its affiliates. All rights reserved.
 
     The contents of this file are subject to the terms of either the GNU
     General Public License Version 2 only ("GPL") or the Common Development
@@ -102,6 +102,7 @@
 			com/sun/mail/smtp/SMTPTransport.java,
 			com/sun/mail/smtp/SMTPSSLTransport.java,
 			com/sun/mail/util/MailSSLSocketFactory.java,
+			com/sun/mail/util/ReadableMime.java,
 			com/sun/mail/util/logging/MailHandler.java
 					"/>
 				    <fileset dir="../dsn/src/main/java"
